# windows-process-injection

./: Cargo.toml  LICENSE  README.md
common/alertable/: Cargo.toml
common/alertable/src/: main.rs
common/hook_payload/: Cargo.toml
common/hook_payload/src/: lib.rs
common/inline_hook/: Cargo.toml
common/inline_hook/src/: inlinehook.rs  lib.rs
common/inline_hook_test/: Cargo.toml
common/inline_hook_test/src/: main.rs
common/payload_messagebox/: Cargo.toml
common/payload_messagebox/src/: lib.rs
injector/: Cargo.toml
injector/src/: main.rs
injector/src/dll_injection/: loadlibrary_createremotethread.rs  mod.rs  queueuserapc.rs
injector/src/hook_user/: mod.rs  setwindowshookex.rs
injector/src/shellcode_injection/: createremotethread.rs  mod.rs  ntcreatethreadex.rs  sirhijack.rs
