[package]
name = "injector"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage",
  "Win32_Storage_FileSystem"
] }